# adk-gaia

./: .gitignore  README.md  cli_chat.py  config.json  eval.py  pyproject.toml  run_api.sh  run_gaia.py
src/: api.py
src/agents/: __init__.py  code_executor.py  file_processor.py  orchestrator.py  web_researcher.py
src/core/: config.py
src/tools/: file_tools.py
